--- a/package.json
+++ b/package.json
@@ -5,15 +5,38 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@radix-ui/react-hover-card": "^1.1.1",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-scroll-area": "^1.1.0",
+    "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@reduxjs/toolkit": "^2.2.6",
+    "@types/cookie-parser": "^1.4.7",
+    "@types/cors": "^2.8.17",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/nodemailer": "^6.4.15",
+    "@types/validator": "^13.12.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "express": "~4.18.1",
+    "handlebars": "^4.7.8",
+    "input-otp": "^1.2.4",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.403.0",
+    "mongoose": "^8.5.0",
+    "next-themes": "^0.3.0",
+    "nodemailer": "^6.9.14",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.24.1",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "@nx/esbuild": "19.4.2",
