--- a/apps/server/.env.example
+++ b/apps/server/.env.example
@@ -4,6 +4,9 @@ ALLOWED_ORIGINS=http://localhost:3000
 # WHITELISTED_EMAIL_DOMAINS is the list of email domains that are allowed to register.
 WHITELISTED_EMAIL_DOMAINS=iitism.ac.in
 
+# MAX_ROOM_WANTS_PER_USER is the maximum number of preferences a user can give
+MAX_ROOM_WANTS_PER_USER=3
+
 # JWT
 # The JWT_SECRET is used to sign the JWT token.
 JWT_SECRET=secret
@@ -39,4 +42,4 @@ MAILING_SERVICE_USER_NAME="Ujjwal Jindal"
 # The MAILING_SERVICE_USER is the email of the user used to send emails.
 MAILING_SERVICE_USER=zechariah.conn@ethereal.email
 # The MAILING_SERVICE_USER_PASSWORD is the password of the user used to send emails.
-MAILING_SERVICE_USER_PASSWORD=XMrs5cS16AzVHZe3Zz5
+MAILING_SERVICE_USER_PASSWORD=
