--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-hover-card": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
@@ -21,6 +23,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "~4.18.1",
+    "express-rate-limit": "^7.3.1",
     "handlebars": "^4.7.8",
     "input-otp": "^1.2.4",
     "jsonwebtoken": "^9.0.2",
@@ -36,7 +39,8 @@
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "tslib": "^2.3.0",
-    "validator": "^13.12.0"
+    "validator": "^13.12.0",
+    "vite-plugin-svgr": "^4.2.0"
   },
   "devDependencies": {
     "@nx/esbuild": "19.4.2",
